--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -25,6 +27,39 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      !(function(win, doc) {
+          function setFontSize() {
+              var baseFontSize = 100;
+              var baseWidth = 320;
+              var clientWidth = document.documentElement.clientWidth ||         window.innerWidth;
+              var innerWidth = Math.max(Math.min(clientWidth, 480), 320);
+              var rem = 100;
+              if (innerWidth > 362 && innerWidth <= 375) {
+                  rem = Math.floor(innerWidth / baseWidth * baseFontSize * 0.9);
+              }
+              if (innerWidth > 375) {
+                  rem = Math.floor(innerWidth / baseWidth * baseFontSize * 0.84);
+              }
+              window.__baseREM = rem;
+              document.querySelector('html').style.fontSize = rem + 'px';
+          }
+          var evt = 'onorientationchange' in win ? 'orientationchange' : 'resize';
+          var timer = null;
+          win.addEventListener(evt, function() {
+              clearTimeout(timer);
+              timer = setTimeout(setFontSize, 300);
+          }, false);
+          win.addEventListener("pageshow", function(e) {
+              if (e.persisted) {
+                  clearTimeout(timer);
+                  timer = setTimeout(setFontSize, 300);
+              }
+          }, false);
+          setFontSize();
+      }(window, document));
+  </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
